src/test/resources/testcases/invalid/functions/int_return_empty.tc
int foo() {
    return; // Error: empty return in int function
}
int main() {
    return foo();
}
